force-app/main/default/objects/KDCE_AssetHistory__c/KDCE_AssetHistory__c.object-meta.xml
<CustomObject>
    <label>Asset History</label>
    <nameField>
        <displayFormat>AH-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>