force-app/main/default/objects/KDCE_AssetHistory__c/fields/ActionDate__c.field-meta.xml
<CustomField>
    <fullName>ActionDate__c</fullName>
    <label>Action Date</label>
    <type>DateTime</type>
</CustomField>