force-app/main/default/objects/KDCE_AssetHistory__c/fields/OrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>OrderLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Item</label>
    <referenceTo>KDCE_OrderLineItem__c</referenceTo>
    <relationshipName>AssetOrderHistories</relationshipName>
    <type>Lookup</type>
</CustomField>